# oktoboot

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
data/: icon.icns
scripts/: build_doda.py  build_frequencies.py
src/oktoboot/: editor.py  engine.py  main.py  store.py
tests/: test_comprehensive.py  test_editor.py  test_engine.py  test_extended.py
