[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oktoboot"
version = "0.1.0"
description = "Offline Arabic Arabizi/Franco-Arab text editor with Moroccan Darija support"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
]

[project.scripts]
oktoboot = "oktoboot.main:main"

[tool.setuptools.packages.find]
where = ["src"]
